        PR c++/16036         * gimple-low.c (lower_function_body): Generate return statement for         fall off the end of the function here ...         * tree-cfg.c (make_edges): ... instead of here.         * gimplify.c (gimplify_return_expr): Mark return temp TREE_NO_WARNING.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@83382 138bc75d-0d04-0410-961f-82ee72b054a4